bin_PROGRAMS = babel obchiral obenergy obfit obgrep \
		 obprop obminimize obrotate obrotamer

babel_SOURCES = babel.cpp
babel_LDADD = ../src/libopenbabel.la @LIBDL@

obchiral_SOURCES = obchiral.cpp
obchiral_LDADD = ../src/libopenbabel.la @LIBDL@

obenergy_SOURCES = obenergy.cpp
obenergy_LDADD = ../src/libopenbabel.la @LIBDL@

obfit_SOURCES = obfit.cpp
obfit_LDADD = ../src/libopenbabel.la @LIBDL@

obgrep_SOURCES = obgrep.cpp
obgrep_LDADD = ../src/libopenbabel.la @LIBDL@

obminimize_SOURCES = obminimize.cpp
obminimize_LDADD = ../src/libopenbabel.la @LIBDL@

obprop_SOURCES = obprop.cpp
obprop_LDADD = ../src/libopenbabel.la @LIBDL@

obrotate_SOURCES = obrotate.cpp
obrotate_LDADD = ../src/libopenbabel.la @LIBDL@

obrotamer_SOURCES = obrotamer.cpp
obrotamer_LDADD = ../src/libopenbabel.la @LIBDL@

AM_CPPFLAGS = -I$(top_srcdir)/include
